--- a/public/index.html
+++ b/public/index.html
@@ -1,50 +1,79 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Mini Spotify</title>
+  <title>Mini Spotify Playlist</title>
   <style>
-    body { font-family: Arial; text-align: center; margin-top: 50px; }
-    audio { width: 300px; margin-top: 20px; }
-    button { padding: 5px 15px; margin-left: 10px; }
+    body { font-family: Arial; text-align: center; margin: 20px; }
+    audio { width: 300px; margin-top: 10px; }
+    table { margin: 20px auto; border-collapse: collapse; width: 80%; }
+    th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
+    th { background-color: #f0f0f0; }
+    input[type="text"] { width: 200px; padding: 5px; margin-bottom: 10px; }
   </style>
 </head>
 <body>
-  <h2>🎵 Mini Spotify (Audio Only) 🎵</h2>
+  <h2>🎵 Mini Spotify Playlist 🎵</h2>
 
   <form id="uploadForm" enctype="multipart/form-data">
     <input type="file" id="song" name="song" accept="audio/*" required>
     <button type="submit">Upload Song</button>
   </form>
 
-  <div id="player"></div>
+  <br>
+  <input type="text" id="search" placeholder="Search song by name">
+
+  <table id="playlist">
+    <thead>
+      <tr>
+        <th>Play</th>
+        <th>Song Name</th>
+        <th>Size</th>
+        <th>Upload Date</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
 
   <script>
     const form = document.getElementById('uploadForm');
-    const player = document.getElementById('player');
+    const playlistBody = document.querySelector('#playlist tbody');
+    const searchInput = document.getElementById('search');
 
-    form.addEventListener('submit', async (e) => {
+    async function fetchSongs() {
+      const res = await fetch('/songs');
+      const data = await res.json();
+      displaySongs(data.songs);
+    }
+
+    function displaySongs(songs) {
+      const filter = searchInput.value.toLowerCase();
+      playlistBody.innerHTML = '';
+
+      songs.filter(song => song.name.toLowerCase().includes(filter))
+           .forEach(song => {
+        const row = document.createElement('tr');
+        row.innerHTML = `
+          <td><audio controls src="${song.url}"></audio></td>
+          <td>${song.name}</td>
+          <td>${song.size}</td>
+          <td>${song.date}</td>
+        `;
+        playlistBody.appendChild(row);
+      });
+    }
+
+    form.addEventListener('submit', async e => {
       e.preventDefault();
       const formData = new FormData(form);
-
-      try {
-        const res = await fetch('/upload', { method: 'POST', body: formData });
-        const data = await res.json();
-
-        if (data.url) {
-          player.innerHTML = `
-            <p>Uploaded Successfully!</p>
-            <audio controls autoplay src="${data.url}"></audio>
-          `;
-          const audio = player.querySelector('audio');
-          audio.play().catch(() => console.log("Autoplay blocked, click play manually."));
-        } else {
-          alert("Upload failed!");
-        }
-      } catch (err) {
-        console.log(err);
-        alert("Error uploading file.");
-      }
+      const res = await fetch('/upload', { method: 'POST', body: formData });
+      const data = await res.json();
+      if (data.songs) displaySongs(data.songs);
     });
+
+    searchInput.addEventListener('input', fetchSongs);
+
+    // Load songs on page load
+    fetchSongs();
   </script>
 </body>
 </html>
