--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
     table { margin: 20px auto; border-collapse: collapse; width: 80%; }
     th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
     th { background-color: #f0f0f0; }
-    input[type="text"] { width: 200px; padding: 5px; margin-bottom: 10px; }
+    input[type="text"], input[type="password"] { padding: 5px; margin-bottom: 10px; }
+    button { padding: 5px 10px; margin: 5px; }
   </style>
 </head>
 <body>
@@ -16,11 +17,13 @@
 
   <form id="uploadForm" enctype="multipart/form-data">
     <input type="file" id="song" name="song" accept="audio/*" required>
+    <input type="password" id="adminPassword" name="password" placeholder="Admin Password" required>
     <button type="submit">Upload Song</button>
   </form>
 
   <br>
   <input type="text" id="search" placeholder="Search song by name">
+  <button onclick="toggleShuffle()">Toggle Shuffle</button>
 
   <table id="playlist">
     <thead>
@@ -39,10 +42,15 @@
     const playlistBody = document.querySelector('#playlist tbody');
     const searchInput = document.getElementById('search');
 
+    let songsList = [];
+    let currentIndex = 0;
+    let shuffle = false;
+
     async function fetchSongs() {
       const res = await fetch('/songs');
       const data = await res.json();
-      displaySongs(data.songs);
+      songsList = data.songs;
+      displaySongs(songsList);
     }
 
     function displaySongs(songs) {
@@ -50,29 +58,56 @@
       playlistBody.innerHTML = '';
 
       songs.filter(song => song.name.toLowerCase().includes(filter))
-           .forEach(song => {
+           .forEach((song, index) => {
         const row = document.createElement('tr');
         row.innerHTML = `
-          <td><audio controls src="${song.url}"></audio></td>
+          <td><audio controls src="${song.url}" id="audio-${index}"></audio></td>
           <td>${song.name}</td>
           <td>${song.size}</td>
           <td>${song.date}</td>
         `;
         playlistBody.appendChild(row);
+
+        const audioEl = document.getElementById(`audio-${index}`);
+        audioEl.addEventListener('ended', () => playNext(index));
       });
+    }
+
+    function playNext(current) {
+      if (songsList.length === 0) return;
+
+      if (shuffle) {
+        currentIndex = Math.floor(Math.random() * songsList.length);
+      } else {
+        currentIndex = (current + 1) % songsList.length;
+      }
+
+      const nextAudio = document.getElementById(`audio-${currentIndex}`);
+      if (nextAudio) nextAudio.play();
+    }
+
+    function toggleShuffle() {
+      shuffle = !shuffle;
+      alert(`Shuffle is now ${shuffle ? 'ON' : 'OFF'}`);
     }
 
     form.addEventListener('submit', async e => {
       e.preventDefault();
       const formData = new FormData(form);
+      formData.append('password', document.getElementById('adminPassword').value);
+
       const res = await fetch('/upload', { method: 'POST', body: formData });
       const data = await res.json();
-      if (data.songs) displaySongs(data.songs);
+
+      if (data.error) {
+        alert(data.error);
+      } else if (data.songs) {
+        displaySongs(data.songs);
+      }
     });
 
     searchInput.addEventListener('input', fetchSongs);
 
-    // Load songs on page load
     fetchSongs();
   </script>
 </body>
