--- a/index.html
+++ b/index.html
@@ -1,56 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Mini Spotify – Upload Song</title>
+<meta charset="UTF-8">
+<title>Mini Spotify</title>
+<style>
+    body {
+        margin: 0;
+        font-family: 'Arial', sans-serif;
+        background: linear-gradient(120deg, #1DB954, #191414);
+        color: white;
+        text-align: center;
+        min-height: 100vh;
+    }
+    h1 {
+        margin-top: 30px;
+    }
+    input[type=file] {
+        margin-top: 20px;
+        padding: 10px;
+        border-radius: 8px;
+        border: none;
+    }
+    button {
+        margin-left: 10px;
+        padding: 10px 20px;
+        background-color: #1DB954;
+        color: white;
+        border: none;
+        border-radius: 25px;
+        cursor: pointer;
+        font-size: 16px;
+        transition: 0.3s;
+    }
+    button:hover {
+        background-color: #1ed760;
+    }
+    #songList {
+        list-style: none;
+        padding: 0;
+        margin-top: 30px;
+    }
+    li {
+        margin: 20px 0;
+        background-color: rgba(255, 255, 255, 0.1);
+        padding: 15px;
+        border-radius: 15px;
+    }
+    audio {
+        width: 90%;
+        outline: none;
+    }
+</style>
 </head>
 <body>
-  <h1>🎵 Mini Spotify Upload (No Admin)</h1>
+<h1>🎵 Mini Spotify Upload</h1>
 
-  <input type="file" id="fileInput" />
-  <button onclick="uploadSong()">Upload Song</button>
+<input type="file" id="fileInput"/>
+<button onclick="uploadSong()">Upload Song</button>
 
-  <h2>Uploaded Songs</h2>
-  <ul id="songList"></ul>
+<ul id="songList"></ul>
 
-  <script>
-    async function uploadSong() {
-      const fileInput = document.getElementById("fileInput");
-
-      if (!fileInput.files[0]) {
-        alert("Please select a file first!");
+<script>
+async function uploadSong() {
+    const fileInput = document.getElementById("fileInput");
+    if (!fileInput.files[0]) {
+        alert("Please select a file!");
         return;
-      }
+    }
 
-      const formData = new FormData();
-      formData.append("file", fileInput.files[0]);
+    const formData = new FormData();
+    formData.append("file", fileInput.files[0]);
 
-      try {
+    try {
         const response = await fetch('https://mini-spotify1.onrender.com/upload', {
-          method: 'POST',
-          body: formData
+            method: 'POST',
+            body: formData
         });
 
         const data = await response.json();
-
         if (!response.ok) {
-          alert("❌ " + data.error);
-          return;
+            alert("❌ " + data.error);
+            return;
         }
 
         const li = document.createElement("li");
         li.innerHTML = `
-          <audio controls src="${data.secure_url}"></audio>
-          <br />
-          <a href="${data.secure_url}" target="_blank">${fileInput.files[0].name}</a>
+            <audio controls src="${data.secure_url}"></audio><br/>
+            <a href="${data.secure_url}" target="_blank">${fileInput.files[0].name}</a>
         `;
         document.getElementById("songList").appendChild(li);
-
         alert("✅ Upload successful!");
-      } catch (err) {
+    } catch (err) {
         alert("Upload failed: " + err.message);
-      }
     }
-  </script>
+}
+</script>
 </body>
 </html>
