--- a/index.html
+++ b/index.html
@@ -7,23 +7,29 @@
     body {
         margin: 0;
         font-family: 'Arial', sans-serif;
-        background: linear-gradient(120deg, #1DB954, #191414);
+        background: linear-gradient(135deg, #1DB954, #191414);
         color: white;
         text-align: center;
         min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
     h1 {
-        margin-top: 30px;
+        margin-top: 40px;
+        font-size: 3rem;
+        letter-spacing: 2px;
     }
     input[type=file] {
         margin-top: 20px;
         padding: 10px;
         border-radius: 8px;
         border: none;
+        font-size: 16px;
     }
     button {
         margin-left: 10px;
-        padding: 10px 20px;
+        padding: 10px 25px;
         background-color: #1DB954;
         color: white;
         border: none;
@@ -38,22 +44,37 @@
     #songList {
         list-style: none;
         padding: 0;
-        margin-top: 30px;
+        margin-top: 40px;
+        width: 80%;
+        max-width: 700px;
     }
     li {
         margin: 20px 0;
         background-color: rgba(255, 255, 255, 0.1);
         padding: 15px;
         border-radius: 15px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
     audio {
         width: 90%;
         outline: none;
+        margin-bottom: 10px;
+    }
+    a {
+        color: #1DB954;
+        text-decoration: none;
+        font-weight: bold;
+    }
+    a:hover {
+        text-decoration: underline;
     }
 </style>
 </head>
 <body>
-<h1>🎵 Mini Spotify Upload</h1>
+
+<h1>🎵 Mini Spotify</h1>
 
 <input type="file" id="fileInput"/>
 <button onclick="uploadSong()">Upload Song</button>
@@ -61,40 +82,51 @@
 <ul id="songList"></ul>
 
 <script>
-async function uploadSong() {
-    const fileInput = document.getElementById("fileInput");
-    if (!fileInput.files[0]) {
-        alert("Please select a file!");
-        return;
-    }
+    const RENDER_URL = "https://mini-spotify1.onrender.com"; // Replace with your Render URL
 
-    const formData = new FormData();
-    formData.append("file", fileInput.files[0]);
-
-    try {
-        // Use your full Render URL here
-        const response = await fetch('https://mini-spotify1.onrender.com/upload', {
-            method: 'POST',
-            body: formData
-        });
-
-        const data = await response.json();
-        if (!response.ok) {
-            alert("❌ " + data.error);
+    async function uploadSong() {
+        const fileInput = document.getElementById("fileInput");
+        if (!fileInput.files[0]) {
+            alert("Please select a file!");
             return;
         }
 
-        const li = document.createElement("li");
-        li.innerHTML = `
-            <audio controls src="${data.secure_url}"></audio><br/>
-            <a href="${data.secure_url}" target="_blank">${fileInput.files[0].name}</a>
-        `;
-        document.getElementById("songList").appendChild(li);
-        alert("✅ Upload successful!");
-    } catch (err) {
-        alert("Upload failed: " + err.message);
+        const formData = new FormData();
+        formData.append("file", fileInput.files[0]);
+
+        try {
+            const response = await fetch(`${RENDER_URL}/upload`, {
+                method: 'POST',
+                body: formData
+            });
+
+            // Check content-type
+            const contentType = response.headers.get("content-type");
+            if (!contentType || !contentType.includes("application/json")) {
+                const text = await response.text();
+                console.error("Received HTML instead of JSON:", text);
+                alert("❌ Upload failed: Server returned HTML instead of JSON");
+                return;
+            }
+
+            const data = await response.json();
+            if (!response.ok) {
+                alert("❌ " + data.error);
+                return;
+            }
+
+            const li = document.createElement("li");
+            li.innerHTML = `
+                <audio controls src="${data.secure_url}"></audio>
+                <a href="${data.secure_url}" target="_blank">${fileInput.files[0].name}</a>
+            `;
+            document.getElementById("songList").appendChild(li);
+            alert("✅ Upload successful!");
+        } catch (err) {
+            alert("Upload failed: " + err.message);
+        }
     }
-}
 </script>
+
 </body>
 </html>
